# avie-core

./: Cargo.toml  build.rs
src/: board.rs  evaluation.rs  gamestate.rs  lib.rs  parse.rs  precomputed.rs
src/board/: mod.rs  representation.rs  tests.rs
src/precomputed/: bishop_magic.rs  mod.rs  moves.rs  precomputed.rs  square_tables.rs  zobrist.rs
